correction in grid-property for alignment in class dashboard

--- a/src/app/client/src/app/staff/components/dashboard/_dashboard-header.scss
+++ b/src/app/client/src/app/staff/components/dashboard/_dashboard-header.scss
@@ -74,7 +74,7 @@
 
           .chapter-separator {
             border-bottom: calculateRem(1px) solid #848484;
-            margin: 0.5rem 0;
+            margin: 0.25rem 0;
           }
         }
       }
