--- a/src/app/client/src/app/staff/components/dashboard/dashboard.component.scss
+++ b/src/app/client/src/app/staff/components/dashboard/dashboard.component.scss
@@ -25,8 +25,7 @@
 @include respond-above(md) {
   .dashboard-grid {
     grid-template-columns: minmax(auto, 30%) minmax(auto, 20%) minmax(auto, 20%) minmax(auto, 30%);
-    // grid-template-rows: repeat(4, 1fr);
-    grid-template-rows: calculateRem(150px) calculateRem(200px) auto auto;
+    grid-template-rows: 9rem 12rem auto auto;
   }
 
   .attendence {
